--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,7 @@
+body {
+    background-color: #8c872b1c;
+}
+    
 h2 {
     text-align: center;
     margin: 45px 35px;
@@ -9,6 +13,8 @@ h2 {
 }
 
 table {
+    box-shadow: 0px 2px 7px 0px #9d9d9d;
+    border-radius: 0.6rem;
     border-collapse: collapse;
     border-spacing: 0;
     border: none;
@@ -35,6 +41,9 @@ table {
         text-align: left;
         vertical-align: middle;
         border-radius: 2px;
+    }
+    th {
+        cursor: pointer;
     }
 }
 .head{
